@@ -3,18 +3,18 @@
   "version": "0.24.0",
   "dependencies": {
     "underscore": {
-      "version": "1.3.3"
+      "version": "1.6.0"
     },
     "step": {
       "version": "0.0.5"
     },
     "grainstore": {
-      "version": "0.18.2",
-      "from": "git://github.com/CartoDB/grainstore.git#0.19.0",
+      "version": "0.20.0",
+      "from": "git://github.com/CartoDB/grainstore.git#0.20.0",
       "dependencies": {
         "redis-mpool": {
-          "version": "0.0.4",
-          "from": "http://github.com/CartoDB/node-redis-mpool/tarball/0.0.4",
+          "version": "0.1.0",
+          "from": "git://github.com/CartoDB/node-redis-mpool.git#0.1.0",
           "dependencies": {
             "hiredis": {
               "version": "0.1.17",
@@ -115,13 +115,15 @@
       }
     },
     "mapnik": {
-      "version": "0.7.28"
+      "version": "0.7.26",
+      "from": "http://github.com/Vizzuality/node-mapnik/tarball/0.7.26-cdb1"
     },
     "semver": {
       "version": "1.1.4"
     },
     "redis-mpool": {
-      "version": "0.0.3",
+      "version": "0.1.0",
+      "from": "git://github.com/CartoDB/node-redis-mpool.git#0.1.0",
       "dependencies": {
         "hiredis": {
           "version": "0.1.17",
@@ -173,6 +175,7 @@
     },
     "pg": {
       "version": "2.6.2",
+      "from": "git://github.com/CartoDB/node-postgres.git#2.6.2-cdb1",
       "dependencies": {
         "generic-pool": {
           "version": "2.0.3"
