@@ -22,19 +22,18 @@
       "Sandro Santilli <strk@vizzuality.com>"
     ],
     "dependencies": {
-        "underscore": "~1.3",
+        "underscore": "~1.6.0",
         "step": "~0.0.5",
-        "grainstore": "git://github.com/CartoDB/grainstore.git#0.19.0",
-        "generic-pool": "~2.0.3",
+        "grainstore": "git://github.com/CartoDB/grainstore.git#0.20.0",
         "express": "~2.5.11",
         "tilelive": "~4.4.2",
         "tilelive-mapnik": "~0.6.5",
-        "mapnik": "~0.7.28",
+        "mapnik": "http://github.com/Vizzuality/node-mapnik/tarball/0.7.26-cdb1",
         "semver": "~1.1.0",
-        "redis-mpool": "~0.0.2",
+        "redis-mpool": "git://github.com/CartoDB/node-redis-mpool.git#0.1.0",
         "carto": "http://github.com/CartoDB/carto/tarball/0.9.5-cdb3",
         "step-profiler": "git://github.com/CartoDB/node-step-profiler.git#0.1.0",
-        "pg": "~2.6.2",
+        "pg": "git://github.com/CartoDB/node-postgres.git#2.6.2-cdb1",
         "torque.js": "~2.2.0",
         "node-statsd": "~0.0.7"
     },
